# llmusic

./: .gitignore  CLAUDE.md  LLMusic_技术文档.md  README.md  build.bat  package-lock.json  package.json  start-dev.bat  start.bat  start_backend.bat  start_electron.bat  vite.config.js  样式规范文档.md  项目结构文档.md
backend/: README.md  backend.spec  entry.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  qqmusic.py  song.py
backend/app/common/: __init__.py
backend/app/core/: config.py
backend/app/credential/: __init__.py  get_credential.py  request_credential.py
backend/app/qqmusic/: __init__.py  client.py
backend/app/schemas/: auth.py  common.py  qqmusic.py  response.py  song.py
backend/app/services/: auth.py  qqmusic.py  search_song.py  song.py
backend/app/utils/: __init__.py
doc/: SCSS到Tailwind重构设计文档.md  TS重构开发需求文档.md  musicdl三方中转API收录.md  样式与动画优化方案.md  模块说明文档.md  项目结构文档.md  项目设计文档.md  项目需求文档.md
doc/demo/: ambient-demo.html  galaxy-ref.md  nebula-ref.md  particles-demo.html  starfield-ref.md
python/: README.md
python/credential/: credential.json
src-main/: audioPlayer.js  audioProcessor.js  database.js  ipcHandlers.js  main.js  musicScanner.js  preload.js  scannerWorker.js  tagEditor.js
src-renderer/: App.vue  index.html  main.js
sys_electron/: dev-runner.js  dev-runner.ts  main.js  main.ts  package-lock.json  package.json  preload.js  preload.ts  tsconfig.json
sys_vue/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
规范文档/: 前端规范文档.md  前端页面规范.md  编程工作流.md
(+212 files in other folders)
