[project]
name = "llmusic-backend"
version = "1.0.0"
description = "LLMusic backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "qqmusic-api-python",
    "httpx",
]

[dependency-groups]
build = [
    "pyinstaller >= 6.0.0",
]

[tool.uv]
package = false
